--- a/secndchallenge/css/style.css
+++ b/secndchallenge/css/style.css
@@ -6,6 +6,10 @@ h3 {
   font-family: "Inter", sans-serif;
 }
 
+img {
+width:30px;
+}
+
 .grayish-blue {
   background-color: hsl(233, 8%, 79%);
   /* background-color: hsl(236, 13%, 42%); */
